--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@tanstack/vue-query": "^5.8.4",
+    "@tanstack/vue-query-devtools": "^5.8.4",
+    "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "bootstrap-vue": "^2.23.1",
+    "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
     "pinia": "^2.1.7",
     "vue": "^3.3.8",
